Dockerfile and updated start_server.sh